turnoff annotations for controllers. adding artists swagger wip.
